Runs on 1.7.10, 1.8.9, 1.12.2, 1.16.5 Forge and 1.20.4 NeoForge